feat(docs): Update Navigation component to use anchor tag for logo link

--- a/docs/src/components/Navigation.astro
+++ b/docs/src/components/Navigation.astro
@@ -27,10 +27,10 @@ const { components, activeTechnology, activeComponentSlug } = Astro.props;
 ---
 
 <aside>
-  <span class="text-logo">
+  <a href="/" class="text-logo">
     <span class="flip-letter">F</span>lexi<strong>UI</strong> 
     <span class="beta-badge">Beta</span>
-  </span>
+  </a>
 
   <nav>
     {components.map(component => {
