feat(svelte/svelte-cssvars): feat: guard editor usage with optional chaining, adjust default styles

--- a/svelte/svelte-cssvars/.svelte-kit/__package__/styles.css
+++ b/svelte/svelte-cssvars/.svelte-kit/__package__/styles.css
@@ -65,7 +65,7 @@
     position: relative;
     text-align: left;
 
-    input:not([type="range"]) {
+    & input:not([type="range"]) {
       outline: none;
       min-width: 28px;
       flex: auto;
@@ -319,6 +319,7 @@
     padding: 0;
     border-radius: 6px;
     border: 1px solid #ffffff1f;
+    margin: 0;
   }
 
   .color-box-input {
