docs(docs): add svelte-tabs component and update imports in docs and examples

--- a/docs/src/pages/[technology]/[component].astro
+++ b/docs/src/pages/[technology]/[component].astro
@@ -2,13 +2,12 @@
 import { Quote } from '@flexiui/svelte-quote';
 import { TagsInput } from '@flexiui/svelte-tags-input';
 import { CSSVars } from "@flexiui/svelte-cssvars";
+import { Tabs, TabPanel } from '@flexiui/svelte-tabs';
 import latestVersion from 'latest-version';
 
 import PreviewCard from '../../components/PreviewCard.svelte';
 
 import Alert from '../../components/ui/Alert.svelte';
-import Tabs from '../../components/ui/Tabs/Tabs.svelte';
-import TabPanel from '../../components/ui/Tabs/TabPanel.svelte';
 import Accordion from '../../components/ui/Accordion/Accordion.svelte';
 import AccordionItem from '../../components/ui/Accordion/AccordionItem.svelte';
 import Button from '../../components/ui/Button.svelte';
