--- a/svelte/svelte-rich-text/src/lib/styles.css
+++ b/svelte/svelte-rich-text/src/lib/styles.css
@@ -35,42 +35,6 @@
     margin-bottom: 0;
   }
 
-  /* Heading styles */
-  /* h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.3;
-    margin-top: 1.5rem;
-    text-wrap: pretty;
-  }
-
-  h1,
-  h2 {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-  }
-
-  h1 {
-    font-size: 1.4rem;
-  }
-
-  h2 {
-    font-size: 1.2rem;
-  }
-
-  h3 {
-    font-size: 1.1rem;
-  }
-
-  h4,
-  h5,
-  h6 {
-    font-size: 1rem;
-  } */
-
   /* Code and preformatted text styles */
   code {
     background-color: var(--purple-light);
@@ -255,6 +219,14 @@
     cursor: ew-resize;
     cursor: col-resize;
   }
+
+  .is-empty::before {
+    color: #8a8a8aa8;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
 }
 
 .fl-rich-text-content {
@@ -276,6 +248,7 @@
   max-width: var(--fl-doc-max-width, 1024px);
   margin-inline: var(--fl-doc-margin-inline, auto);
   margin-block: var(--fl-doc-margin-block, 2rem);
+  box-sizing: border-box;
 }
 
 .fl-toolbar-dropdown-panel {
@@ -496,7 +469,6 @@
     min-height: 32px;
 
     & button {
-      background: transparent;
       border: none;
       display: flex;
       align-items: center;
@@ -507,10 +479,10 @@
       min-height: 18px;
       min-width: 18px;
       border-radius: 100%;
-      background: #474747;
+      background: #8989891f;
 
       &:hover {
-        background: rgb(104, 104, 104);
+        background: #89898966;
       }
 
       & svg {
