--- a/svelte/svelte-rich-text/src/app.css
+++ b/svelte/svelte-rich-text/src/app.css
@@ -203,3 +203,107 @@ tbody tr:hover {
 tbody tr:last-child td {
   border-bottom: none;
 }
+
+.tiptap {
+  --purple-light: #d2bcff29;
+  --purple: #535bf2;
+  --black: #000;
+  --white: #fff;
+  --gray-1: #f0f0f0;
+  --gray-2: #e0e0e0;
+  --gray-3: #c0c0c0;
+  
+  outline: none;
+
+  :first-child {
+    margin-top: 0;
+  }
+
+  :last-child {
+    margin-bottom: 0;
+  }
+
+  /* Code and preformatted text styles */
+  code {
+    background-color: var(--purple-light);
+    border-radius: 0.4rem;
+    color: var(--white);
+    font-size: 0.85rem;
+    padding: 0.25em 0.3em;
+  }
+
+  pre {
+    background: var(--black);
+    border-radius: 0.5rem;
+    color: var(--white);
+    font-family: 'JetBrainsMono', monospace;
+    margin: 1.5rem 0;
+    padding: 0.75rem 1rem;
+
+    code {
+      background: none;
+      color: inherit;
+      font-size: 0.8rem;
+      padding: 0;
+    }
+  }
+
+  blockquote {
+    border-left: 3px solid var(--gray-3);
+    margin: 1.5rem 0;
+    padding-left: 1rem;
+  }
+
+  hr {
+    border: none;
+    border-top: 1px solid var(--gray-2);
+    margin: 2rem 0;
+  }
+
+    /* List styles */
+  ul,
+  ol {
+    padding: 0 1.25rem;
+    margin: 1.25rem 1rem 1.25rem 0.4rem;
+
+    li p {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+  }
+
+  ul[data-type=taskList]{
+    padding-left: 0;
+
+    li {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+    }
+
+    li[data-checked=true] > div > p {
+      opacity: .5;
+      text-decoration: line-through;
+    }
+  }
+
+  ul[data-type="taskList"] li {
+    & label {
+      position: relative;
+      padding-top: 0.275rem;
+      padding-right: 0.5rem;
+
+      input {
+        width: 16px;
+        height: 16px;
+        margin: 0;
+        accent-color: #8affd7;
+      }
+    }
+
+    & > div {
+      flex: auto;
+    }
+  }
+
+}
