--- a/svelte/svelte-rich-text/src/lib/styles.css
+++ b/svelte/svelte-rich-text/src/lib/styles.css
@@ -23,210 +23,114 @@
     --fl-doc-radius: 0;
 }
 
-/* Basic editor styles */
-.tiptap {
-  outline: none;
+.special-box {
+  position: relative;
+  padding: 0 12px;
+  display: inline-flex;
 
-  :first-child {
-    margin-top: 0;
+  &::before {
+    content: "";
+    position: absolute;
+    height: calc(100% + 20px);
+    width: 100%;
+    border-inline: 1px dashed;
+    left: 0;
+    top: -10px;
   }
 
-  :last-child {
-    margin-bottom: 0;
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: -10px;
+    width: calc(100% + 20px);
+    border-block: 1px dashed;
   }
 
-  /* Code and preformatted text styles */
-  code {
-    background-color: var(--purple-light);
-    border-radius: 0.4rem;
-    color: var(--white);
-    font-size: 0.85rem;
-    padding: 0.25em 0.3em;
-  }
-
-  pre {
-    background: var(--black);
-    border-radius: 0.5rem;
-    color: var(--white);
-    font-family: 'JetBrainsMono', monospace;
-    margin: 1.5rem 0;
-    padding: 0.75rem 1rem;
-
-    code {
-      background: none;
-      color: inherit;
-      font-size: 0.8rem;
-      padding: 0;
-    }
-  }
-
-  blockquote {
-    border-left: 3px solid var(--gray-3);
-    margin: 1.5rem 0;
-    padding-left: 1rem;
-  }
-
-  hr {
-    border: none;
-    border-top: 1px solid var(--gray-2);
-    margin: 2rem 0;
-  }
-
-    /* List styles */
-  ul,
-  ol {
-    padding: 0 1.25rem;
-    margin: 1.25rem 1rem 1.25rem 0.4rem;
-
-    li p {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
-    }
-  }
-
-  ul[data-type=taskList]{
-    padding-left: 0;
-
-    li {
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-    }
-
-    li[data-checked=true] > div > p {
-      opacity: .5;
-      text-decoration: line-through;
-    }
-  }
-
-  ul[data-type="taskList"] li {
-    & label {
-      position: relative;
-      padding-top: 0.275rem;
-      padding-right: 0.5rem;
-
-      input {
-        width: 16px;
-        height: 16px;
-        margin: 0;
-        accent-color: #8affd7;
-      }
-    }
-
-    & > div {
-      flex: auto;
-    }
-  }
-
-  .special-box {
-    position: relative;
-    padding: 0 12px;
-    display: inline-flex;
-
-    &::before {
-      content: "";
-      position: absolute;
-      height: calc(100% + 20px);
-      width: 100%;
-      border-inline: 1px dashed;
-      left: 0;
-      top: -10px;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      height: 100%;
-      top: 0;
-      left: -10px;
-      width: calc(100% + 20px);
-      border-block: 1px dashed;
-    }
-
-    &::before, &::after {
-      border-color: #ffffff33;
-      pointer-events: none;
-    }
-  }
-
-  /* Table-specific styling */
-  .tableWrapper table {
-    border-collapse: collapse;
-    margin: 0;
-    overflow: hidden;
-    table-layout: fixed;
-    width: calc(100% - 12px);
-    margin-left: 12px;
-    margin-top: 12px;
-    min-width: 100px;
-    overflow-y: hidden;
-    overflow-x: auto;
-
-    td,
-    th {
-      border: 1px solid #6e6e6e;
-      box-sizing: border-box;
-      min-width: 1em;
-      padding: 6px 8px;
-      position: relative;
-      vertical-align: top;
-
-      > * {
-        margin-bottom: 0;
-      }
-    }
-
-    th {
-      background-color: #f0f0f030;
-      font-weight: bold;
-      text-align: left;
-    }
-
-    .selectedCell:after {
-      background: #e0e0e024;
-      content: '';
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      pointer-events: none;
-      position: absolute;
-      z-index: 2;
-    }
-
-    .column-resize-handle {
-      background-color: var(--purple);
-      bottom: -2px;
-      pointer-events: none;
-      position: absolute;
-      right: -2px;
-      top: 0;
-      width: 4px;
-    }
-  }
-
-  .fl-table-cell-content > div > * {
-    margin-bottom: 0;
-  }
-
-  .tableWrapper {
-    overflow-x: auto;
-    padding: 0 14px 14px;
-    margin: 24px -14px 0px;
-  }
-
-  &.resize-cursor {
-    cursor: ew-resize;
-    cursor: col-resize;
-  }
-
-  .is-empty::before {
-    color: #8a8a8aa8;
-    content: attr(data-placeholder);
-    float: left;
-    height: 0;
+  &::before, &::after {
+    border-color: #ffffff33;
     pointer-events: none;
   }
+}
+
+/* Table-specific styling */
+.tableWrapper table {
+  border-collapse: collapse;
+  margin: 0;
+  overflow: hidden;
+  table-layout: fixed;
+  width: calc(100% - 12px);
+  margin-left: 12px;
+  margin-top: 12px;
+  min-width: 100px;
+  overflow-y: hidden;
+  overflow-x: auto;
+
+  td,
+  th {
+    border: 1px solid #6e6e6e;
+    box-sizing: border-box;
+    min-width: 1em;
+    padding: 6px 8px;
+    position: relative;
+    vertical-align: top;
+
+    > * {
+      margin-bottom: 0;
+    }
+  }
+
+  th {
+    background-color: #f0f0f030;
+    font-weight: bold;
+    text-align: left;
+  }
+
+  .selectedCell:after {
+    background: #e0e0e024;
+    content: '';
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    pointer-events: none;
+    position: absolute;
+    z-index: 2;
+  }
+
+  .column-resize-handle {
+    background-color: var(--purple);
+    bottom: -2px;
+    pointer-events: none;
+    position: absolute;
+    right: -2px;
+    top: 0;
+    width: 4px;
+  }
+}
+
+.fl-table-cell-content > div > * {
+  margin-bottom: 0;
+}
+
+.tableWrapper {
+  overflow-x: auto;
+  padding: 0 14px 14px;
+  margin: 24px -14px 0px;
+}
+
+&.resize-cursor {
+  cursor: ew-resize;
+  cursor: col-resize;
+}
+
+.is-empty::before {
+  color: #8a8a8aa8;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
 }
 
 .fl-rich-text-content {
@@ -240,7 +144,7 @@
   width: 100%;
 }
 
-.fl-rich-text-content-doc {
+.fl-rich-text-doc {
   padding: var(--fl-doc-padding, 2rem);
   background: var(--fl-doc-bg, transparent);
   border-radius: var(--fl-doc-radius, 12px);
