--- a/svelte/svelte-rich-text/src/app.css
+++ b/svelte/svelte-rich-text/src/app.css
@@ -212,7 +212,7 @@ tbody tr:last-child td {
   --gray-1: #f0f0f0;
   --gray-2: #e0e0e0;
   --gray-3: #c0c0c0;
-  
+
   outline: none;
 
   :first-child {
@@ -224,13 +224,13 @@ tbody tr:last-child td {
   }
 
   /* Code and preformatted text styles */
-  code {
+  /* code {
     background-color: var(--purple-light);
     border-radius: 0.4rem;
     color: var(--white);
     font-size: 0.85rem;
     padding: 0.25em 0.3em;
-  }
+  } */
 
   pre {
     background: var(--black);
@@ -306,4 +306,113 @@ tbody tr:last-child td {
     }
   }
 
+  .special-box {
+    position: relative;
+    padding: 0 12px;
+    display: inline-flex;
+
+    &::before {
+      content: "";
+      position: absolute;
+      height: calc(100% + 20px);
+      width: 100%;
+      border-inline: 1px dashed;
+      left: 0;
+      top: -10px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      height: 100%;
+      top: 0;
+      left: -10px;
+      width: calc(100% + 20px);
+      border-block: 1px dashed;
+    }
+
+    &::before, &::after {
+      border-color: #ffffff33;
+      pointer-events: none;
+    }
+  }
+
+  /* Table-specific styling */
+  .tableWrapper table {
+    border-collapse: collapse;
+    margin: 0;
+    overflow: hidden;
+    table-layout: fixed;
+    width: calc(100% - 12px);
+    margin-left: 12px;
+    margin-top: 12px;
+    min-width: 100px;
+    overflow-y: hidden;
+    overflow-x: auto;
+
+    td,
+    th {
+      border: 1px solid #6e6e6e;
+      box-sizing: border-box;
+      min-width: 1em;
+      padding: 6px 8px;
+      position: relative;
+      vertical-align: top;
+
+      > * {
+        margin-bottom: 0;
+      }
+    }
+
+    th {
+      background-color: #f0f0f030;
+      font-weight: bold;
+      text-align: left;
+    }
+
+    .selectedCell:after {
+      background: #e0e0e024;
+      content: '';
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      pointer-events: none;
+      position: absolute;
+      z-index: 2;
+    }
+
+    .column-resize-handle {
+      background-color: var(--purple);
+      bottom: -2px;
+      pointer-events: none;
+      position: absolute;
+      right: -2px;
+      top: 0;
+      width: 4px;
+    }
+  }
+
+  .fl-table-cell-content > div > * {
+    margin-bottom: 0;
+  }
+
+  .tableWrapper {
+    overflow-x: auto;
+    padding: 0 14px 14px;
+    margin: 24px -14px 0px;
+  }
+
+  &.resize-cursor {
+    cursor: ew-resize;
+    cursor: col-resize;
+  }
+
+  .is-empty::before {
+    color: #8a8a8aa8;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
 }
