--- a/svelte/svelte-rich-text/src/app.css
+++ b/svelte/svelte-rich-text/src/app.css
@@ -138,11 +138,8 @@
   --radius: 12px;
 }
 
-  .table-wrapper {
-  background: var(--table-bg);
-  border-radius: var(--radius);
-  border: 1px solid var(--border);
-  overflow: hidden;
+.tableWrapper {
+  overflow: auto;
 }
 
 table {
