feat(svelte/svelte-rich-text): feat: add bubble menus, cell selection support, audio rewriteStyles,

--- a/svelte/svelte-rich-text/src/lib/styles.css
+++ b/svelte/svelte-rich-text/src/lib/styles.css
@@ -1,26 +1,26 @@
 :root {
-    --purple-light: #d2bcff29;
-    --purple: #535bf2;
-    --black: #000;
-    --white: #fff;
-    --gray-1: #f0f0f0;
-    --gray-2: #e0e0e0;
-    --gray-3: #c0c0c0;
+  --purple-light: #d2bcff29;
+  --purple: #535bf2;
+  --black: #000;
+  --white: #fff;
+  --gray-1: #f0f0f0;
+  --gray-2: #e0e0e0;
+  --gray-3: #c0c0c0;
 
-    --fl-editor-radius: 12px;
-    --fl-editor-bg: #242424;
-    --fl-toolbar-sticky-position: 0;
-    --fl-toolbar-z-index: 10;
-    --fl-toolbar-padding: 6px;
-    --fl-toolbar-gap: 5px;
-    --fl-toolbar-bg: #242424;
+  --fl-editor-radius: 12px;
+  --fl-editor-bg: #242424;
+  --fl-toolbar-sticky-position: 0;
+  --fl-toolbar-z-index: 10;
+  --fl-toolbar-padding: 6px;
+  --fl-toolbar-gap: 5px;
+  --fl-toolbar-bg: #242424;
 
-    --fl-doc-max-width: 1024px;
-    --fl-doc-padding: 2rem;
-    --fl-doc-bg: transparent;
-    --fl-doc-margin-inline: auto;
-    --fl-doc-margin-block: 2rem;
-    --fl-doc-radius: 0;
+  --fl-doc-max-width: 1024px;
+  --fl-doc-padding: 2rem;
+  --fl-doc-bg: transparent;
+  --fl-doc-margin-inline: auto;
+  --fl-doc-margin-block: 2rem;
+  --fl-doc-radius: 0;
 }
 
 /* Basic editor styles */
@@ -59,7 +59,7 @@
   box-sizing: border-box;
 
   &.fl-toolbar-dropdown-panel--table {
-    min-width: 160px
+    min-width: 160px;
   }
 }
 
@@ -75,249 +75,343 @@
   }
 }
 
+.flex-auto {
+  flex: auto;
+}
 
-  .flex-auto {
-    flex: auto;
+.fl-rich-text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  min-height: 56px;
+  background-color: var(--fl-editor-bg, #242424);
+  color: var(--text-color);
+  box-sizing: border-box;
+  border-radius: var(--fl-editor-radius);
+
+  .fl-editor-image-url-input {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 158px;
+    outline: none;
+    min-height: 24px;
+    padding: 0 3px;
+    border: none;
+    background: transparent;
+    line-height: 1.6;
   }
 
-  .fl-rich-text {
+  .fl-bubble-menu {
+    padding: 6px;
+    background: #242424b0;
+    border: 1px solid #ffffff12;
+    backdrop-filter: blur(16px);
+    border-radius: 14px;
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    min-height: 56px;
-    background-color: var(--fl-editor-bg, #242424);
-    color: var(--text-color);
-    box-sizing: border-box;
-    border-radius: var(--fl-editor-radius);
-  }
-
-  .fl-rich-text-toolbar {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow: auto;
-    align-items: center;
-    gap: var(--fl-toolbar-gap);
-    padding: var(--fl-toolbar-padding);
-    position: sticky;
-    top: var(--fl-toolbar-sticky-position, 0);
-    z-index: var(--fl-toolbar-z-index, 10);
-    background: var(--fl-toolbar-bg, #242424);
-    border-radius: var(--fl-editor-radius);
-  }
-
-  .fl-rich-text-toolbar-group {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: var(--fl-toolbar-gap);
+    gap: 6px;
+    position: relative;
+    z-index: 9;
 
     button {
-      padding: 8px 8px;
-      flex: auto;
+      border-radius: 9px;
       border: none;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 8px;
-      color: var(--text-color);
-      font-size: 14px;
       display: flex;
       align-items: center;
       justify-content: center;
-      white-space: nowrap;
-      gap: 2px;
+      padding: 6px 11px;
+      min-width: 30px;
+      min-height: 30px;
+      background: rgba(255, 255, 255, 0.1);
+      transition: background 0.3s ease;
       cursor: pointer;
-      line-height: 1;
-      min-height: 32px;
 
-      &.fl-font-size-button {
-        font-size: 14px;
-      }
+      &.fl-bubble-menu-mark-button {
+        padding-inline: 6px;
 
-      & svg {
-        width: 16px;
-        height: 16px;
+        svg {
+          width: 16px;
+          height: 16px;
 
-        &.toogle-dropdown-button-icon {
-          width: 7px;
-          height: 7px;
-          margin-left: 4px;
+          &.toogle-dropdown-button-icon {
+            width: 8px;
+            margin: 0 2px 0 6px;
+          }
         }
       }
 
-      &:disabled {
-        cursor: not-allowed;
-        opacity: 0.5;
+      &.is-active {
+        background: var(--fl-editor-accent-color);
+        color: white;
+
+        &.accent-soft {
+          background: transparent;
+          color: var(--fl-editor-accent-color);
+          position: relative;
+          
+          &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            background: var(--fl-editor-accent-color);
+            opacity: 0.15;
+            border-radius: inherit;
+          }
+        }
       }
     }
   }
+}
 
-  button.is-active {
-    background: var(--purple);
-    color: white;
-  }
+.fl-rich-text-toolbar {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: auto;
+  align-items: center;
+  gap: var(--fl-toolbar-gap);
+  padding: var(--fl-toolbar-padding);
+  position: sticky;
+  top: var(--fl-toolbar-sticky-position, 0);
+  z-index: var(--fl-toolbar-z-index, 10);
+  background: var(--fl-toolbar-bg, #242424);
+  border-radius: var(--fl-editor-radius);
+}
 
-  .special-box-icon {
-    width: 16px;
-    height: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
+.fl-rich-text-toolbar-group {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: var(--fl-toolbar-gap);
+
+  button {
+    padding: 8px 8px;
+    flex: auto;
     border: none;
-    padding: 0px;
-    font-size: 11px;
-    border-radius: 3px;
-    outline: 1px dashed #818181;
-    scale: 1.1;
-  }
-
-  .fl-button-color-text-popover {
-    color: inherit;
-    width: 16px;
-    height: 16px;
-    border-radius: 100%;
-    border: 1px solid #d7d7d78a;
-    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    color: var(--text-color);
+    font-size: 14px;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-
-  .fl-editor-color-palette {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 6px;
-    align-items: center;
-
-    .fl-color-swatch {
-      display: flex;
-      min-width: 17px;
-      border-radius: 100%;
-      align-items: center;
-      justify-content: center;
-      outline: 1px solid #83828238;
-      position: relative;
-      aspect-ratio: 1;
-      border: none;
-      padding: 0;
-      cursor: pointer;
-
-      &.active {
-        box-shadow: 0 0 0 2px #ffffff30;
-      }
-
-      &.unset-color::after {
-        content: "";
-        width: 2px;
-        height: 100%;
-        background: red;
-        position: absolute;
-        transform: rotate(30deg) scaleY(1.2);
-      }
-    }
-
-    input[type="color"] {
-      display: inline-flex;
-      vertical-align: bottom;
-      border: none;
-      border-radius: var(--radius);
-      padding: 0;
-      min-width: 17px;
-      max-height: 17px;
-      aspect-ratio: 1;
-      background: transparent;
-      width: auto;
-      border-radius: 100%;
-
-      &::-webkit-color-swatch-wrapper {
-        padding: 0;
-      }
-
-      &::-webkit-color-swatch {
-        border: 0;
-        border-radius: var(--radius);
-      }
-
-      &::-moz-color-swatch {
-        border: 0;
-        border-radius: var(--radius);
-      }
-    }
-
-    .fl-color-picker-btn {
-      cursor: pointer;
-      position: relative;
-      background: conic-gradient(in hsl longer hue, red 0 100%);
-
-      & input {
-        opacity: 0;
-      }
-    }
-  }
-
-  .fl-font-size-editor {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    padding: 0 6px;
-    border-radius: 8px;
-    background: rgba(255, 255, 255, 0.1);
+    white-space: nowrap;
+    gap: 2px;
+    cursor: pointer;
+    line-height: 1;
     min-height: 32px;
 
-    & button {
-      border: none;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2px;
-      backdrop-filter: blur(5px);
-      cursor: pointer;
-      min-height: 18px;
-      min-width: 18px;
-      border-radius: 100%;
-      background: #8989891f;
+    &.fl-font-size-button {
+      font-size: 14px;
+    }
 
-      &:hover {
-        background: #89898966;
-      }
+    & svg {
+      width: 16px;
+      height: 16px;
 
-      & svg {
-        width: 12px;
-        height: 12px;
+      &.toogle-dropdown-button-icon {
+        width: 7px;
+        height: 7px;
+        margin-left: 4px;
       }
     }
 
-    input {
-      width: 28px;
-      text-align: center;
-      border: none;
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
+  }
+}
+
+
+button {
+  &.is-active {
+    background: var(--fl-editor-accent-color);
+    color: white;
+
+    &.accent-soft {
       background: transparent;
-      color: var(--text-color);
-      font-size: 14px;
-      padding: 0;
-      outline: none;
+      color: var(--fl-editor-accent-color);
+      position: relative;
+      
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: var(--fl-editor-accent-color);
+        opacity: 0.15;
+        border-radius: inherit;
+      }
+    }
+  }
+}
+
+.special-box-icon {
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  border: none;
+  padding: 0px;
+  font-size: 11px;
+  border-radius: 3px;
+  outline: 1px dashed currentColor;
+  scale: 1.1;
+}
+
+.fl-button-color-text-popover {
+  color: inherit;
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+  border: 1px solid #d7d7d78a;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fl-editor-color-palette {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 6px;
+  align-items: center;
+
+  .fl-color-swatch {
+    display: flex;
+    min-width: 17px;
+    border-radius: 100%;
+    align-items: center;
+    justify-content: center;
+    outline: 1px solid #83828238;
+    position: relative;
+    aspect-ratio: 1;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+
+    &.active {
+      box-shadow: 0 0 0 2px #ffffff30;
+    }
+
+    &.unset-color::after {
+      content: "";
+      width: 2px;
+      height: 100%;
+      background: red;
+      position: absolute;
+      transform: rotate(30deg) scaleY(1.2);
     }
   }
 
-  .fl-range-element {
+  input[type="color"] {
+    display: inline-flex;
+    vertical-align: bottom;
+    border: none;
+    border-radius: var(--radius);
+    padding: 0;
+    min-width: 17px;
+    max-height: 17px;
+    aspect-ratio: 1;
+    background: transparent;
+    width: auto;
+    border-radius: 100%;
+
+    &::-webkit-color-swatch-wrapper {
+      padding: 0;
+    }
+
+    &::-webkit-color-swatch {
+      border: 0;
+      border-radius: var(--radius);
+    }
+
+    &::-moz-color-swatch {
+      border: 0;
+      border-radius: var(--radius);
+    }
+  }
+
+  .fl-color-picker-btn {
+    cursor: pointer;
+    position: relative;
+    background: conic-gradient(in hsl longer hue, red 0 100%);
+
+    & input {
+      opacity: 0;
+    }
+  }
+}
+
+.fl-font-size-editor {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 0 6px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+  min-height: 32px;
+
+  & button {
+    border: none;
     display: flex;
     align-items: center;
-    gap: 8px;
+    justify-content: center;
+    padding: 2px;
+    backdrop-filter: blur(5px);
+    cursor: pointer;
+    min-height: 18px;
+    min-width: 18px;
+    border-radius: 100%;
+    background: #8989891f;
+
+    &:hover {
+      background: #89898966;
+    }
+
+    & svg {
+      width: 12px;
+      height: 12px;
+    }
   }
 
-  .fl-range-element input {
-    accent-color: #ffffff;
-  }
-
-  .fl-range-element-value {
-    padding: 0 6px;
+  input {
+    width: 28px;
+    text-align: center;
+    border: none;
+    background: transparent;
+    color: var(--text-color);
     font-size: 14px;
+    padding: 0;
+    outline: none;
+  }
+}
+
+.fl-range-element {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.fl-range-element input {
+  accent-color: #ffffff;
+}
+
+.fl-range-element-value {
+  padding: 0 6px;
+  font-size: 14px;
 }
 
 .ProseMirror-selectednode {
-    outline: 2px solid #535bf2;
+  outline: 2px solid #535bf2;
 }
-
 
 .media-grid-view-content {
   --fl-grid-cols: 2;
@@ -398,9 +492,8 @@
   }
 }
 
-
 .node-MediaGridComponent {
-    margin: 1.75rem 0;
+  margin: 1.75rem 0;
 }
 
 .fl-media-grid {
