feat(svelte/svelte-rich-text): feat: Add dynamic audioAttributes styling for RichText audio player,

--- a/svelte/svelte-rich-text/src/app.css
+++ b/svelte/svelte-rich-text/src/app.css
@@ -329,8 +329,9 @@ tbody tr:last-child td {
     }
 
     &::before, &::after {
-      border-color: #ffffff33;
+      border-color: currentColor;
       pointer-events: none;
+      opacity: 0.3;
     }
   }
 
