fix(svelte/svelte-rich-text): fix(styles): update accent color for range input to use CSS variable

--- a/svelte/svelte-rich-text/src/lib/styles.css
+++ b/svelte/svelte-rich-text/src/lib/styles.css
@@ -411,7 +411,7 @@ button {
 }
 
 .fl-range-element input {
-  accent-color: #ffffff;
+  accent-color: var(--fl-editor-accent-color);
 }
 
 .fl-range-element-value {
